--- a/TravelAgency/appsettings.json
+++ b/TravelAgency/appsettings.json
@@ -1,8 +1,11 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  }
+	"ConnectionStrings": {
+		"TravelDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=TravelDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+	},
+	"Logging": {
+		"IncludeScopes": false,
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	}
 }
